# utext

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  utext  utext.cbp
app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
app/src/: CMakeLists.txt  Makefile  cmake_install.cmake  codeeditor.cpp  codeeditor.h  filedialog.cpp  findandreplace.cpp  findandreplace.h  findandreplace.ui  highlighter.cpp  highlighter.h  lib.cpp  main_lib.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_file.cpp
